# rezlooks-gtk-engine

./: README.md
rezlooks/: Changelog  Makefile.am  Makefile.in  README  configure.ac  rezlooks.pc  rezlooks.pc.in
rezlooks-0.6/: AUTHORS  CREDITS  config.status  configure  configure.ac
rezlooks-0.6/src/: animation.c  animation.h  rezlooks_draw.c  rezlooks_draw.h  rezlooks_rc_style.c  rezlooks_style.c  rezlooks_theme_main.c  rezlooks_types.h  support.c
rezlooks/src/: .rezlooks_draw.c.swp  animation.c  config.h  config.h.in  rezlooks_draw.h  rezlooks_rc_style.h  rezlooks_style.h  support.h
